--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,7 @@
     <a href="index.html" class="back-btn">⬅ Back to Portfolio</a>
   </header>
 
-  <div> <a href="Hardeep.pdf" target="_blank" class="back-btn">📄 Open PDF</a>
+  <div> <a href="https://drive.google.com/file/d/1IT3OK3N-wENj0zbyslNWYMe2H4U1KxGr/view?usp=drive_link" target="_blank" class="back-btn">📄 Open PDF</a>
   </div>
 
   <script>
