--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <p class="label">Creative Portfolio</p>
       <h1>HARDEEP<br>SINGH</h1>
       <p class="description" id="typed-text"></p>
-     <a href="Hardeep.pdf" class="btn-glow" download>📄 Download Resume</a>
+     <a href="https://drive.google.com/file/d/1IT3OK3N-wENj0zbyslNWYMe2H4U1KxGr/view?usp=drive_link" class="btn-glow" download>📄 Download Resume</a>
 
     </div>
     <div class="hero-right" data-aos="fade-left">
-      <img src="deep.jpg" alt="Hardeep Singh" />
+      <img src="Deep.jpg" alt="Hardeep Singh" />
     </div>
   </div>
 
