--- a/index.html
+++ b/index.html
@@ -2,169 +2,99 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Responsive Bootstrap Website</title>
-
-  <!-- ✅ Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-    }
-
-    .hero {
-      background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-        url('https://images.unsplash.com/photo-1503602642458-232111445657?auto=format&fit=crop&w=1600&q=80') no-repeat center center/cover;
-      color: white;
-      padding: 120px 0;
-      text-align: center;
-    }
-
-    .hero h1 {
-      font-size: 2.5rem;
-      font-weight: 700;
-    }
-
-    .hero p {
-      font-size: 1.1rem;
-    }
-
-    .product-card img {
-      height: 200px;
-      object-fit: cover;
-      border-radius: 10px;
-    }
-
-    footer {
-      background: #222;
-      color: #ddd;
-      padding: 20px 0;
-      text-align: center;
-    }
-
-    footer a {
-      color: #0d6efd;
-      text-decoration: none;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hardeep Singh Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <h1>Hardeep Singh</h1>
+    <div class="profile-wrapper">
+      <img src="deep.jpg" alt="Profile Photo">
+    
+	<a class="resume-btn" href="https://drive.google.com/file/d/1IT3OK3N-wENj0zbyslNWYMe2H4U1KxGr/view?usp=drive_link" target="_blank">📄 View Full Resume</a>
 
-  <!-- ✅ Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="#">MyWebsite</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#products">Products</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-        </ul>
-      </div>
     </div>
+    <p>BCA final-year student specializing in web development and cloud technologies. Passionate about creating responsive, user-focused digital experiences using modern tools like ASP.NET, Salesforce, and JavaScript.</p>
+    <a class="header-btn" href="#contact">Let's Connect</a>
+    <div class="social-icons">
+      <a href="https://www.linkedin.com/in/hardeep-singh-5ba483263/" target="_blank">🔗</a>
+      <a href="mailto:ittzdeep231@gmail.com">📧</a>
+      <a href="tel:+919711374840">📞</a>
+    </div>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#experience">Experience</a>
+    <a href="#contact">Contact</a>
   </nav>
 
-  <!-- ✅ Hero Section -->
-  <section id="home" class="hero d-flex flex-column justify-content-center align-items-center">
-    <div class="container">
-      <h1>Welcome to Our Store</h1>
-      <p>High-quality products with modern design & responsive layout.</p>
-      <a href="#products" class="btn btn-primary mt-3">Shop Now</a>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Final-year BCA student at Jagannath Community College, Delhi, with strong hands-on experience in both front-end and back-end web development. Proficient in HTML5, CSS3, JavaScript, ASP.NET, and C#, with a passion for building clean, responsive, and scalable web applications. Skilled in working with relational databases such as SQL Server and MySQL, and adept at integrating cloud platforms like Salesforce and Heroku. Demonstrates a strong understanding of UI/UX design principles, accessibility standards, and mobile-first development. Continuously engaged in learning emerging technologies, contributing to real-world projects, and collaborating with peers to deliver impactful digital solutions.</p>
+  </section>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<center>
+<section id="skills">
+  <h2>Skills Overview</h2>
+  <ul class="skills-list">
+    <li><i class="fab fa-html5"></i> HTML5 / CSS3 / JavaScript</li>
+    <li><i class="fas fa-code"></i> ASP.NET / C#</li>
+    <li><i class="fas fa-cloud"></i> Cloud Computing</li>
+    <li><i class="fas fa-sitemap"></i> Salesforce / Heroku</li>
+    <li><i class="fas fa-database"></i> SQL Server / MySQL</li>
+    <li><i class="fab fa-git-alt"></i> Git & Version Control</li>
+  </ul>
+</section>
+
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project-item">
+      <h3>Employee Management System</h3>
+      <p><strong>Tech:</strong> ASP.NET, SQL Server</p>
+      <p>Web app for managing employee data with CRUD features.</p>
+    </div>
+    <div class="project-item">
+      <h3>Garment Management System</h3>
+      <p><strong>Tech:</strong> C++</p>
+      <p>Console app for inventory and billing using file handling.</p>
+    </div>
+    <div class="project-item">
+      <h3>Salesforce Automation App</h3>
+      <p><strong>Tech:</strong> Salesforce, Heroku</p>
+      <p>Created an app with workflows and deployed it using Heroku.</p>
     </div>
   </section>
 
-  <!-- ✅ About Section -->
-  <section id="about" class="py-5">
-    <div class="container text-center">
-      <h2 class="fw-bold mb-4">About Us</h2>
-      <p class="lead text-muted">
-        We provide premium quality items with the best customer experience. Our website is fully responsive using Bootstrap 5.
-      </p>
-    </div>
+  <section id="experience">
+   
+  <h2>Experience & Certifications</h2>
+  <div class="experience-item">
+    <h3>Intern – CodSoft</h3>
+    <p>May – June 2025 | HTML, CSS, JavaScript projects</p>
+  </div>
+  <div class="experience-item">
+    <h3><a href="https://drive.google.com/file/d/1uROfKJaWi4nAnUiKysJrPFsiMG_810AL/view" target="_blank">NPTEL – Cloud Computing (IIT Kharagpur)</a></h3>
+  </div>
+  <div class="experience-item">
+   <h3><a href="http://drive.google.com/file/d/19RN6nkTqTrSTed5KDbLSySQCQxBxc8y2/view" target="_blank">NPTEL – Joy of Computing using Python (IIT Ropar)</a></h3>
+
+  </div>
+</section></center>
+
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: ittzdeep231@gmail.com</p>
+    <p>Phone: 9711374840</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/hardeep-singh-5ba483263/" target="_blank">linkedin.com/in/hardeep-singh</a></p>
   </section>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- ✅ Products Section -->
-  <section id="products" class="py-5 bg-light">
-    <div class="container">
-      <h2 class="text-center fw-bold mb-5">Our Products</h2>
-      <div class="row g-4">
-        <!-- Product 1 -->
-        <div class="col-md-4 col-sm-6">
-          <div class="card product-card shadow-sm">
-            <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?auto=format&fit=crop&w=800&q=80" class="card-img-top" alt="Product 1">
-            <div class="card-body text-center">
-              <h5 class="card-title">Stylish Chair</h5>
-              <p class="card-text text-muted">$120</p>
-              <button class="btn btn-outline-primary w-100">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-
-        <!-- Product 2 -->
-        <div class="col-md-4 col-sm-6">
-          <div class="card product-card shadow-sm">
-            <img src="https://images.unsplash.com/photo-1616627458989-fd9bfa92a6bf?auto=format&fit=crop&w=800&q=80" class="card-img-top" alt="Product 2">
-            <div class="card-body text-center">
-              <h5 class="card-title">Modern Lamp</h5>
-              <p class="card-text text-muted">$85</p>
-              <button class="btn btn-outline-primary w-100">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-
-        <!-- Product 3 -->
-        <div class="col-md-4 col-sm-6">
-          <div class="card product-card shadow-sm">
-            <img src="https://images.unsplash.com/photo-1606813907291-739c97dc4e2b?auto=format&fit=crop&w=800&q=80" class="card-img-top" alt="Product 3">
-            <div class="card-body text-center">
-              <h5 class="card-title">Wooden Table</h5>
-              <p class="card-text text-muted">$199</p>
-              <button class="btn btn-outline-primary w-100">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- ✅ Contact Section -->
-  <section id="contact" class="py-5">
-    <div class="container">
-      <h2 class="text-center fw-bold mb-4">Contact Us</h2>
-      <div class="row justify-content-center">
-        <div class="col-md-6">
-          <form class="p-4 shadow rounded bg-white">
-            <div class="mb-3">
-              <label for="name" class="form-label">Your Name</label>
-              <input type="text" id="name" class="form-control" placeholder="Enter your name" required>
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Your Email</label>
-              <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
-            </div>
-            <div class="mb-3">
-              <label for="message" class="form-label">Message</label>
-              <textarea id="message" class="form-control" rows="4" placeholder="Write your message"></textarea>
-            </div>
-            <button class="btn btn-primary w-100">Send Message</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- ✅ Footer -->
-  <footer>
-    <p>© 2025 MyWebsite </p>
-  </footer>
-
-  <!-- ✅ Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
