--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <h1>Hardeep Singh</h1>
     <div class="profile-wrapper">
-      <img src="deep.jpg" alt="Profile Photo">
+      <img src="Deep.jpg" alt="Profile Photo">
     
 	<a class="resume-btn" href="https://drive.google.com/file/d/1IT3OK3N-wENj0zbyslNWYMe2H4U1KxGr/view?usp=drive_link" target="_blank">📄 View Full Resume</a>
 
@@ -98,3 +98,4 @@
 
 </body>
 </html>
+
